# Auto_TeamProject

./: README.md
week10/catkin_ws/devel/lib/pkgconfig/: school_classes.pc
week10/catkin_ws/devel/lib/school_classes/: capture_subscribed_image.py
week10/catkin_ws/src/school_classes/: image_subsrciber_node
week10/catkin_ws/src/school_classes/bags/: click_rgb.py  with_pointcloud.bag
week10/catkin_ws/src/school_classes/launch/: dff
week10/catkin_ws/src/school_classes/scripts/: project.py  scan_to_cloud.py
week2/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
week2/catkin_ws/devel/lib/pkgconfig/: school_classes.pc
week2/catkin_ws/src/school_classes/: CMakeLists.txt
week5/: calibrate_camera.py  image_translation.py  load_camera_params.py  side.py
week_ffinal/catkin_ws/devel/: .catkin
week_final/catkin_ws/devel/: setup.fish
week_final/catkin_ws/src/school_classes/: map4.pgm  map4.yaml
week_realfinal/catkin_ws/src/school_classes/: CMakeLists.txt  map6.pgm  map6.yaml
week_realfinal/catkin_ws/src/school_classes/scripts/: doking.py
week_realfinal/catkin_ws/src/turtlebot3_bringup/: CMakeLists.txt  package.xml
week_realfinal/catkin_ws/src/turtlebot3_description/: CMakeLists.txt  package.xml
week_realfinal/catkin_ws/src/turtlebot3_example/: CMakeLists.txt
week_realfinal/catkin_ws/src/turtlebot3_msgs/: CMakeLists.txt
week_realfinal/catkin_ws/src/turtlebot3_navigation/: CMakeLists.txt
week_realfinal/catkin_ws/src/turtlebot3_slam/: CMakeLists.txt  package.xml
week_realfinal/catkin_ws/src/turtlebot3_slam/cmake/: turtlebot3_slamConfig.cmake
(+36 files in other folders)
